--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.52.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1"
   }
 }
